2009-12-10 Jochen Rieger <j.rieger@connecta.ag>
    * version 1.0.1
    * removed index_old.php
    * imroved ext description and manual

2009-12-09 Jochen Rieger <j.rieger@connecta.ag>
    * set version to 1.0.0 due to major changes - special thanks to Dimitri!
    * improved manual
    * removed dependency on rtehtmlarea
    * changed some locallang labels

2009-12-09 Dimitri König <dk@cabag.ch>
    * version 0.6.5
    * added "show all links" feature
    * added aoe linkhandler checking

2009-11-16 Dimitri König <dk@cabag.ch>
    * version 0.6.4
    * hook added for loading external language file

2009-11-16 Dimitri König <dk@cabag.ch>
    * version 0.6.3
    * changed checking methods -> now ref index update mechanism is used for fetching links

2009-11-11 Dimitri König <dk@cabag.ch>
    * version 0.6.2
    * changed checking methods
    * externalized checking mechanism
    * added checking of internal pages

2009-10-24 Jochen Rieger <j.rieger@connecta.ag>
    * set version to 0.6.1
    * bugfix if no page selected

2009-04-16 Jochen Rieger <j.rieger@connecta.ag>

    * set version to 0.6.0
    * updated manual
	* big thanks to Stefan Galinski for his improvements... as follows
	* checkURL now working with TYPO3 API method t3lib_div::getUrl()
	* added support for ftp/ftps links as well as page type "External URL"
	* table method refactored
	* anchor problem fixed

2009-04-12 Jochen Rieger <j.rieger@connecta.ag>

	* set version to 0.5.0
	* added keywords to manual
	* added manual
	* set state to BETA
	* fixed count bug (http's in normal text have been counted too)
	* little code cleanup

2009-03-16 Philipp Mueller <pmueller@juhui.ch>

	* compatibility: usable without curl (see checkURL() in mod1)

2009-03-14 Jonas Duebi <jd@cabag.ch>

	* files from fileadmin/ and uploads/ are also checked now
	* merged the two table render functions which where copy paste...
	* rewrite of checkURL function with curl - faster and more reliable
