@@ -1,9 +1,9 @@
 <?php
 
 	// DO NOT REMOVE OR CHANGE THESE 3 LINES:
-define('TYPO3_MOD_PATH', '../typo3conf/ext/cag_linkchecker/mod1/');
-$BACK_PATH='../../../../typo3/';
-$MCONF["name"]="web_txcaglinkcheckerM1";
+#define('TYPO3_MOD_PATH', '../typo3conf/ext/cag_linkchecker/mod1/');
+#$BACK_PATH='../../../../typo3/';
+$MCONF['name'] = 'web_txcaglinkcheckerM1';
 
 	
 $MCONF['access'] = 'user,group';
